fix: openapi spec
